<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.diseasedetector.TakeImageActivity">

    <TextView
        android:id="@+id/titlePopUp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:text="@string/kotoran_ayam"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/previewImageView"
        />
    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/cameraXButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kotoran" />

    <Button
        android:id="@+id/cameraXButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:labelFor="@id/cameraXButton"
        android:padding="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/camera_x"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/detectionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/galleryButton"
        />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:backgroundTint="@color/black"
        android:scaleType="fitCenter"
        android:text="@string/gallery"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/detectionButton"
        app:layout_constraintEnd_toStartOf="@id/cameraXButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/detectionButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:padding="20dp"
        android:backgroundTint="@color/brown"
        android:text="@string/deteksi_penyakit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>