<!-- res/layout/fragment_result.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/titlePopUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/hasil_deteksi"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/disease_1"
            android:layout_below="@+id/titlePopUp"
            android:layout_marginTop="40dp"
            />
        <TextView
            android:id="@+id/desc"
            android:text="@string/disease_desc_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:layout_below="@+id/resultTextView"
            android:layout_marginTop="10dp"

            />

        <Button
            android:id="@+id/batalBtn"
            android:layout_marginTop="50dp"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="Batal"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"
            android:layout_below="@+id/desc"
            android:layout_alignParentStart="true"

            />

        <Button
            android:id="@+id/cariObatBtn"
            android:layout_width="110dp"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:text="Cari Obat"
            android:textColor="@color/white"
            android:backgroundTint="@color/brown"
            android:layout_below="@+id/desc"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
